04.APP/01.test.apple_banana/01-3.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nlb-example
  namespace: test
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: apple.ekstest.com
    http:
      paths:
        - path: /apple
          backend:
            serviceName: apple-service 
            servicePort: 5678
        - path: /banana
          backend:
            serviceName: banana-service 
            servicePort: 5678
  # This section is only required if TLS is to be enabled for the Ingress
  #tls:
  #    - hosts:
  #        - www.example.com
  #      secretName: example-tls
